--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/mbernier" id="view-on-github"><span>View on GitHub</span></a>
+          <!-- <a href="https://github.com/mbernier" id="view-on-github"><span>View on GitHub</span></a> -->
+          <a href="https://github.com/mbernier"><span>View source on GitHub</span></a>
         </section>
 
         <hr>
