--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 <a id="recipes" class="anchor" href="#recipes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recipes</h3>
 
 <p>I wanted to play with github pages and I cook recipes. So, I am going to put these things together. </p>
+
+<ul>
+  <li><a href="https://github.com/mbernier/double-smoked-bacon">Double Smoked Bacon</a></li>
+</ul>
+
         </section>
 
         <footer>
